{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 353,
  "lineage": "b0d0f867-e738-f8c1-bc6a-256bb43d1fab",
  "resources": [
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aft-vpc-natgw-01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002b20caeda954b8f",
            "domain": "vpc",
            "id": "eipalloc-002b20caeda954b8f",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-72-44-194.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.72.44.194",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aft.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aft-vpc-natgw-02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b5f00a84f620295",
            "domain": "vpc",
            "id": "eipalloc-01b5f00a84f620295",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-208-45-27.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.208.45.27",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aft.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aft-vpc-igw",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:internet-gateway/igw-0db0be2bba8c551d6",
            "id": "igw-0db0be2bba8c551d6",
            "owner_id": "804448413129",
            "tags": {
              "Name": "aft-vpc-igw"
            },
            "tags_all": {
              "Name": "aft-vpc-igw",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aft-vpc-natgw-01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002b20caeda954b8f",
            "connectivity_type": "public",
            "id": "nat-0949a3ac449bbd20a",
            "network_interface_id": "eni-0c042e728cac3f2a5",
            "private_ip": "192.168.2.38",
            "public_ip": "54.72.44.194",
            "subnet_id": "subnet-09b532553c8feebd6",
            "tags": {
              "Name": "aft-vpc-natgw-01"
            },
            "tags_all": {
              "Name": "aft-vpc-natgw-01",
              "managed_by": "AFT"
            }
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aft-vpc-natgw-02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b5f00a84f620295",
            "connectivity_type": "public",
            "id": "nat-0c53c717818e50d65",
            "network_interface_id": "eni-04a9262c69d6e3e6e",
            "private_ip": "192.168.2.232",
            "public_ip": "52.208.45.27",
            "subnet_id": "subnet-0387162a42ba8df39",
            "tags": {
              "Name": "aft-vpc-natgw-02"
            },
            "tags_all": {
              "Name": "aft-vpc-natgw-02",
              "managed_by": "AFT"
            }
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:route-table/rtb-01612190412dc8d19",
            "id": "rtb-01612190412dc8d19",
            "owner_id": "804448413129",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0949a3ac449bbd20a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-private-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-01",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:route-table/rtb-0ae53b684ef8a7c17",
            "id": "rtb-0ae53b684ef8a7c17",
            "owner_id": "804448413129",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c53c717818e50d65",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-private-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-02",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:route-table/rtb-0f4893570b1b6ceeb",
            "id": "rtb-0f4893570b1b6ceeb",
            "owner_id": "804448413129",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db0be2bba8c551d6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-public-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-01",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0994820441d3ffbbf",
            "route_table_id": "rtb-01612190412dc8d19",
            "subnet_id": "subnet-090ee28a6b2779f35"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccd0e265e13129a5",
            "route_table_id": "rtb-0ae53b684ef8a7c17",
            "subnet_id": "subnet-0fbf0295c6df87487"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa69b5c74f362d2e",
            "route_table_id": "rtb-0f4893570b1b6ceeb",
            "subnet_id": "subnet-09b532553c8feebd6"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_public_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044c463ef68925bb6",
            "route_table_id": "rtb-0f4893570b1b6ceeb",
            "subnet_id": "subnet-0387162a42ba8df39"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aft_vpc_default_sg",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:security-group/sg-0d5a3a51c1cf3042b",
            "description": "Allow outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5a3a51c1cf3042b",
            "ingress": [],
            "name": "aft-default-sg",
            "name_prefix": "",
            "owner_id": "804448413129",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aft_vpc_endpoint_sg",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:security-group/sg-049fd7e42e28613d7",
            "description": "Allow inbound HTTPS traffic and all Outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049fd7e42e28613d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/22"
                ],
                "description": "Allow inbound SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/22"
                ],
                "description": "Allow inbound TLS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aft-endpoint-sg",
            "name_prefix": "",
            "owner_id": "804448413129",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:subnet/subnet-090ee28a6b2779f35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090ee28a6b2779f35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804448413129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-private-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-01",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:subnet/subnet-0fbf0295c6df87487",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbf0295c6df87487",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804448413129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-private-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-02",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:subnet/subnet-09b532553c8feebd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.2.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b532553c8feebd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804448413129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-public-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-01",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_public_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:subnet/subnet-0387162a42ba8df39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.2.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0387162a42ba8df39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804448413129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-public-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-02",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aft_vpc",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc/vpc-0738a48762cabc9e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/22",
            "default_network_acl_id": "acl-07ea7fa4e2dcd0c8a",
            "default_route_table_id": "rtb-0da02e54a74b75051",
            "default_security_group_id": "sg-0e629b62d9fc98253",
            "dhcp_options_id": "dopt-0934982d0f3976b05",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0738a48762cabc9e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da02e54a74b75051",
            "owner_id": "804448413129",
            "tags": {
              "Name": "aft-management-vpc"
            },
            "tags_all": {
              "Name": "aft-management-vpc",
              "managed_by": "AFT"
            }
          },
          "dependencies": [
            "module.aft.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-075d7c42828c808d4",
            "dns_entry": [
              {
                "dns_name": "vpce-075d7c42828c808d4-mlh9fdqm.codebuild.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-075d7c42828c808d4-mlh9fdqm-eu-west-1a.codebuild.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-075d7c42828c808d4-mlh9fdqm-eu-west-1b.codebuild.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "codebuild.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z04595452VNI1W4OHX9KH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-075d7c42828c808d4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09bbf8603c447709c",
              "eni-0df363fdac08302b7"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.codebuild",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.codebuild",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codebuild"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-0599f5a42a061c82a",
            "dns_entry": [
              {
                "dns_name": "vpce-0599f5a42a061c82a-x1l0m7iv.codecommit.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0599f5a42a061c82a-x1l0m7iv-eu-west-1b.codecommit.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0599f5a42a061c82a-x1l0m7iv-eu-west-1a.codecommit.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "codecommit.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z04549013AOV1FJPFTLR3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0599f5a42a061c82a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01d8d2a2437ace081",
              "eni-0afc5e4f506d588ea"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.codecommit",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.codecommit",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codecommit"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-0bf30c052a84fb4db",
            "dns_entry": [
              {
                "dns_name": "vpce-0bf30c052a84fb4db-70u18up5.codepipeline.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0bf30c052a84fb4db-70u18up5-eu-west-1b.codepipeline.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0bf30c052a84fb4db-70u18up5-eu-west-1a.codepipeline.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "codepipeline.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0383099BRVGWG583PHS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0bf30c052a84fb4db",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04fb31cfb4e26c33f",
              "eni-05e535ccd6886ff67"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.codepipeline",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.codepipeline",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codepipeline"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-0cfef2966beea942c",
            "cidr_blocks": [
              "52.94.5.0/24",
              "35.71.72.0/22",
              "52.94.26.0/25",
              "52.119.240.0/21",
              "52.94.24.0/23"
            ],
            "id": "vpce-0cfef2966beea942c",
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01612190412dc8d19",
              "rtb-0ae53b684ef8a7c17",
              "rtb-0f4893570b1b6ceeb"
            ],
            "service_name": "com.amazonaws.eu-west-1.dynamodb",
            "state": "available",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_region.aft-management"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-0874659d018b9b0e7",
            "dns_entry": [
              {
                "dns_name": "vpce-0874659d018b9b0e7-r4l9ea9y.events.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0874659d018b9b0e7-r4l9ea9y-eu-west-1b.events.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0874659d018b9b0e7-r4l9ea9y-eu-west-1a.events.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "events.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z04449741UWXA8H8ZJ0X5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0874659d018b9b0e7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0791ca1bb4ae16e1b",
              "eni-091dc562ea18500e8"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.events",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.events",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.events"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git-codecommit",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-055ddbc3377d836ad",
            "dns_entry": [
              {
                "dns_name": "vpce-055ddbc3377d836ad-m99lkv7o.git-codecommit.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-055ddbc3377d836ad-m99lkv7o-eu-west-1b.git-codecommit.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-055ddbc3377d836ad-m99lkv7o-eu-west-1a.git-codecommit.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "git-codecommit.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z03817547AHZZGSFFTH9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-055ddbc3377d836ad",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06a91192d1a2172e7",
              "eni-0d91309e8d26fbaff"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.git-codecommit",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.git-codecommit",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.git-codecommit"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-08c5f9a9cf5249230",
            "dns_entry": [
              {
                "dns_name": "vpce-08c5f9a9cf5249230-op2muosw.kms.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-08c5f9a9cf5249230-op2muosw-eu-west-1b.kms.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-08c5f9a9cf5249230-op2muosw-eu-west-1a.kms.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "kms.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z05728774XH1RQ6ANNBX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-08c5f9a9cf5249230",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06aa3ebb758c0f97e",
              "eni-0fb9ebdb84be10b5d"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.kms",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.kms"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "lambda",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-08a9e42a646778de9",
            "dns_entry": [
              {
                "dns_name": "vpce-08a9e42a646778de9-p05puoqb.lambda.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-08a9e42a646778de9-p05puoqb-eu-west-1b.lambda.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-08a9e42a646778de9-p05puoqb-eu-west-1a.lambda.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "lambda.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z03833021VBZL9XKVGE9G"
              },
              {
                "dns_name": "lambda.eu-west-1.api.aws",
                "hosted_zone_id": "Z04448161D8IA8W84EB16"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-08a9e42a646778de9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04759e11700ed6c21",
              "eni-08934c4470410bb70"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.lambda",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.lambda",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.lambda"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-0981bae6e22cec80d",
            "dns_entry": [
              {
                "dns_name": "vpce-0981bae6e22cec80d-y2n69po5.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0981bae6e22cec80d-y2n69po5-eu-west-1b.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0981bae6e22cec80d-y2n69po5-eu-west-1a.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "logs.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z040541611EY5CBULIU1A"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0981bae6e22cec80d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02193dee4406087be",
              "eni-0684ed90f25e40edd"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.logs",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.logs"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-0046720471077d626",
            "cidr_blocks": [
              "18.34.240.0/22",
              "18.34.32.0/20",
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "id": "vpce-0046720471077d626",
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01612190412dc8d19",
              "rtb-0ae53b684ef8a7c17",
              "rtb-0f4893570b1b6ceeb"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_region.aft-management"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-015971aed804f095c",
            "dns_entry": [
              {
                "dns_name": "vpce-015971aed804f095c-hinhw8oy.servicecatalog.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-015971aed804f095c-hinhw8oy-eu-west-1b.servicecatalog.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-015971aed804f095c-hinhw8oy-eu-west-1a.servicecatalog.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "servicecatalog.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0381732WM7EUCNTQJ19"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-015971aed804f095c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08390e23898c6aa12",
              "eni-0921601f73b746cc7"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.servicecatalog",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.servicecatalog",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.servicecatalog"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-0121068c1f5a87c4b",
            "dns_entry": [
              {
                "dns_name": "vpce-0121068c1f5a87c4b-0qf70ggc.sns.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0121068c1f5a87c4b-0qf70ggc-eu-west-1b.sns.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0121068c1f5a87c4b-0qf70ggc-eu-west-1a.sns.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "sns.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z044622330LD2TCK82539"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0121068c1f5a87c4b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06b8920e3d9f62d83",
              "eni-0af2172613e9cf15e"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.sns",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.sns",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sns"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-06adb67aa9fb11d84",
            "dns_entry": [
              {
                "dns_name": "vpce-06adb67aa9fb11d84-nhztopcq.sqs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-06adb67aa9fb11d84-nhztopcq-eu-west-1b.sqs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-06adb67aa9fb11d84-nhztopcq-eu-west-1a.sqs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "sqs.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0460043TMMPTGGKZWWN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-06adb67aa9fb11d84",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-003caf4f19b4ec7dc",
              "eni-0c164f9bd0d33ee1e"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.sqs",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.sqs",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sqs"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-04eb60effffaa20f4",
            "dns_entry": [
              {
                "dns_name": "vpce-04eb60effffaa20f4-bh49kiju.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-04eb60effffaa20f4-bh49kiju-eu-west-1a.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-04eb60effffaa20f4-bh49kiju-eu-west-1b.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ssm.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z05711931G0J494FMUMAM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-04eb60effffaa20f4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c3f7253e2cded22a",
              "eni-0cf83b7c4b2bc5fea"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.ssm",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.ssm"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "states",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-05af69f04f9c79b34",
            "dns_entry": [
              {
                "dns_name": "vpce-05af69f04f9c79b34-bpen8d54.states.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-05af69f04f9c79b34-bpen8d54-eu-west-1a.states.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-05af69f04f9c79b34-bpen8d54-eu-west-1b.states.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "states.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z05722131NGSYEMPRCERB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-05af69f04f9c79b34",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-036537b4a6ac13b55",
              "eni-07f0d26b18b6e06bd"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.states",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.states",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.states"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:804448413129:vpc-endpoint/vpce-01e9836b8d9d122fb",
            "dns_entry": [
              {
                "dns_name": "vpce-01e9836b8d9d122fb-axzpdec5.sts.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-01e9836b8d9d122fb-axzpdec5-eu-west-1b.sts.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-01e9836b8d9d122fb-axzpdec5-eu-west-1a.sts.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "sts.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z05657221KNH61O9YVMOY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-01e9836b8d9d122fb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-011ccb82331fae576",
              "eni-048b0fc0a481d7130"
            ],
            "owner_id": "804448413129",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-049fd7e42e28613d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-090ee28a6b2779f35",
              "subnet-0fbf0295c6df87487"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0738a48762cabc9e5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.sts",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sts"
          ]
        }
      ]
    }
  ]
}